# kaggle_experiment_orchestrator

./: .gitignore  Makefile  README.md  generate_dummy_experiments.py  pyproject.toml
.github/workflows/: ci.yml
data/: sample_experiments.csv
orchestrator_agent/: __init__.py  adk_agent_cli.py  adk_tools.py  cli_agent.py  main.py  notebook_agent.py  orchestrator.py  ranking.py  template_agent.py  tools.py  viz.py
src/keo/agents/: rule_based.py
src/keo/cli/: agent.py  portfolio.py
src/keo/core/: schema.py
src/keo/portfolio/: rank.py  summarize.py
tests/: test_ranking.py  test_schema.py  test_summary_smoke.py
